<resources>
    <string name="mock_text">ThisIsMockText ThisIsMockText ThisIsMockText ThisIsMockText</string>
    <string name="app_name">PlaylistMaker</string>
    <string name="title">Playlist maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="theme_select">Темная тема</string>
    <string name="str_share_app">Поделиться приложением</string>
    <string name="str_ask_support">Написать в поддержку</string>
    <string name="str_user_agreement">Пользовательское соглашение</string>

    <string name="str_email">sviridov.sergey.0@yandex.ru</string>
    <string name="str_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="str_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="str_share_link">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="str_agree_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="str_TODO">TODO</string>
    <string name="str_clear">Очистить</string>

    <string name="str_search_img_description">Обложка трека</string>
    <string name="str_search_goto_track_description">Переход к треку</string>
</resources>