<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="0dp"
        style="@style/Theme.main">

        <LinearLayout android:id="@+id/layout_panel_header"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="top">

            <FrameLayout android:id="@+id/layout_btn_title"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="top">

                <Button
                    android:id="@+id/btn_arrow_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="left|center"
                    android:layout_margin="4dp"
                    android:visibility="invisible">
                </Button>

                <TextView
                    android:id="@+id/lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="left|center"
                    android:text="@string/title"
                    style="@style/title_main">
                </TextView>

            </FrameLayout>

            <Button android:id="@+id/btn_filter_list"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="right|center"
                android:layout_margin="4dp"
                android:visibility="invisible">
            </Button>

        </LinearLayout>

        <LinearLayout android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/btn_search"
                app:icon="@drawable/search"
                android:text="@string/btn_search"
                style="@style/main_big_button">
            </Button>

            <Button
                android:id="@+id/btn_library"
                android:text="@string/btn_library"
                app:icon="@drawable/library"
                style="@style/main_big_button">
            </Button>

            <Button
                android:id="@+id/btn_settings"
                android:text="@string/btn_settings"
                app:icon="@drawable/settings"
                style="@style/main_big_button">
            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>