<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="0dp">

        <LinearLayout android:id="@+id/layout_panel_header"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="top">

            <LinearLayout android:id="@+id/layout_title"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="top">

                <ImageButton
                    android:id="@+id/btn_arrow_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="left|center"
                    android:layout_margin="4dp"
                    android:visibility="visible"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/arrow_back">
                </ImageButton>

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:text="@string/btn_settings"
                    android:textSize="@dimen/header_font_size"
                    android:textColor="@color/black">
                </TextView>

            </LinearLayout>

            <Button android:id="@+id/btn_filter_list"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="right|center"
                android:layout_margin="4dp"
                android:visibility="invisible">
            </Button>

        </LinearLayout>

        <LinearLayout android:id="@+id/layout_theme_select"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="top"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/text_view_theme_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/theme_select"
                android:textSize="@dimen/settings_font_size"
                android:textColor="@color/black">
            </TextView>

            <Switch
                android:id="@+id/switch_theme_select"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="0dp">
            </Switch>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout_share"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="top">

            <TextView
                android:id="@+id/text_view_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/str_share_app"
                android:textSize="@dimen/settings_font_size"
                android:textColor="@color/black">
            </TextView>

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/share"
                android:background="@color/white"
                app:tint="@color/gray">
            </ImageButton>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout_support"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="top">

            <TextView
                android:id="@+id/text_view_support"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/str_ask_support"
                android:textSize="@dimen/settings_font_size"
                android:textColor="@color/black">
            </TextView>

            <ImageButton
                android:id="@+id/btn_support"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/support"
                android:background="@color/white"
                app:tint="@color/gray">
            </ImageButton>
        </LinearLayout>

        <LinearLayout android:id="@+id/layout_agreement"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="top">

            <TextView
                android:id="@+id/text_view_agreement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/str_user_agreement"
                android:textSize="@dimen/settings_font_size"
                android:textColor="@color/black">
            </TextView>

            <ImageButton
                android:id="@+id/btn_agreement"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/arrow_forward"
                android:background="@color/white"
                app:tint="@color/gray">
            </ImageButton>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>